# gui executable: rosegarden

INCLUDE_DIRECTORIES ( 
    ${ROSEGARDEN_SOURCE_DIR}/src
    ${ROSEGARDEN_SOURCE_DIR}/src/base
    ${ROSEGARDEN_SOURCE_DIR}/src/sound
    ${ROSEGARDEN_BINARY_DIR}/src/gui
)

LINK_DIRECTORIES (
    ${ROSEGARDEN_BINARY_DIR}/src/base
    ${ROSEGARDEN_BINARY_DIR}/src/sound
)

# to rebuild the list:
# find ../commands/ ../document/ . -iname '*.cpp' -or -iname '*.h' > list.txt
SET(gui_SRCS
	../commands/audio/DistributeAudioCommand.cpp
	../commands/audio/DistributeAudioCommand.h
	../commands/edit/AddDotCommand.cpp
	../commands/edit/AddDotCommand.h
	../commands/edit/AddMarkerCommand.cpp
	../commands/edit/AddMarkerCommand.h
	../commands/edit/ChangeVelocityCommand.cpp
	../commands/edit/ChangeVelocityCommand.h
	../commands/edit/ClearTriggersCommand.cpp
	../commands/edit/ClearTriggersCommand.h
	../commands/edit/CollapseNotesCommand.cpp
	../commands/edit/CollapseNotesCommand.h
	../commands/edit/CopyCommand.cpp
	../commands/edit/CopyCommand.h
	../commands/edit/CutAndCloseCommand.cpp
	../commands/edit/CutAndCloseCommand.h
	../commands/edit/CutCommand.cpp
	../commands/edit/CutCommand.h
	../commands/edit/EraseCommand.cpp
	../commands/edit/EraseCommand.h
	../commands/edit/EventEditCommand.cpp
	../commands/edit/EventEditCommand.h
	../commands/edit/EventQuantizeCommand.cpp
	../commands/edit/EventQuantizeCommand.h
	../commands/edit/EventUnquantizeCommand.cpp
	../commands/edit/EventUnquantizeCommand.h
	../commands/edit/InsertTriggerNoteCommand.cpp
	../commands/edit/InsertTriggerNoteCommand.h
	../commands/edit/InvertCommand.cpp
	../commands/edit/InvertCommand.h
	../commands/edit/ModifyMarkerCommand.cpp
	../commands/edit/ModifyMarkerCommand.h
	../commands/edit/MoveAcrossSegmentsCommand.cpp
	../commands/edit/MoveAcrossSegmentsCommand.h
	../commands/edit/MoveCommand.cpp
	../commands/edit/MoveCommand.h
	../commands/edit/PasteEventsCommand.cpp
	../commands/edit/PasteEventsCommand.h
	../commands/edit/PasteSegmentsCommand.cpp
	../commands/edit/PasteSegmentsCommand.h
	../commands/edit/RemoveMarkerCommand.cpp
	../commands/edit/RemoveMarkerCommand.h
	../commands/edit/RescaleCommand.cpp
	../commands/edit/RescaleCommand.h
	../commands/edit/RetrogradeCommand.cpp
	../commands/edit/RetrogradeCommand.h
	../commands/edit/RetrogradeInvertCommand.cpp
	../commands/edit/RetrogradeInvertCommand.h
	../commands/edit/SelectionPropertyCommand.cpp
	../commands/edit/SelectionPropertyCommand.h
	../commands/edit/SetLyricsCommand.cpp
	../commands/edit/SetLyricsCommand.h
	../commands/edit/SetNoteTypeCommand.cpp
	../commands/edit/SetNoteTypeCommand.h
	../commands/edit/SetTriggerCommand.cpp
	../commands/edit/SetTriggerCommand.h
	../commands/edit/TransposeCommand.cpp
	../commands/edit/TransposeCommand.h
	../commands/event/EventInsertionCommand.cpp
	../commands/event/EventInsertionCommand.h
	../commands/matrix/MatrixEraseCommand.cpp
	../commands/matrix/MatrixEraseCommand.h
	../commands/matrix/MatrixInsertionCommand.cpp
	../commands/matrix/MatrixInsertionCommand.h
	../commands/matrix/MatrixModifyCommand.cpp
	../commands/matrix/MatrixModifyCommand.h
	../commands/matrix/MatrixPercussionInsertionCommand.cpp
	../commands/matrix/MatrixPercussionInsertionCommand.h
	../commands/notation/AddFingeringMarkCommand.cpp
	../commands/notation/AddFingeringMarkCommand.h
	../commands/notation/AddIndicationCommand.cpp
	../commands/notation/AddIndicationCommand.h
	../commands/notation/AddMarkCommand.cpp
	../commands/notation/AddMarkCommand.h
	../commands/notation/AddSlashesCommand.cpp
	../commands/notation/AddSlashesCommand.h
	../commands/notation/AddTextMarkCommand.cpp
	../commands/notation/AddTextMarkCommand.h
	../commands/notation/AutoBeamCommand.cpp
	../commands/notation/AutoBeamCommand.h
	../commands/notation/BeamCommand.cpp
	../commands/notation/BeamCommand.h
	../commands/notation/BreakCommand.cpp
	../commands/notation/BreakCommand.h
	../commands/notation/ChangeSlurPositionCommand.cpp
	../commands/notation/ChangeSlurPositionCommand.h
	../commands/notation/ChangeStemsCommand.cpp
	../commands/notation/ChangeStemsCommand.h
	../commands/notation/ChangeStyleCommand.cpp
	../commands/notation/ChangeStyleCommand.h
	../commands/notation/ClefInsertionCommand.cpp
	../commands/notation/ClefInsertionCommand.h
	../commands/notation/CollapseRestsCommand.cpp
	../commands/notation/CollapseRestsCommand.h
	../commands/notation/DeCounterpointCommand.cpp
	../commands/notation/DeCounterpointCommand.h
	../commands/notation/EraseEventCommand.cpp
	../commands/notation/EraseEventCommand.h
	../commands/notation/FixNotationQuantizeCommand.cpp
	../commands/notation/FixNotationQuantizeCommand.h
	../commands/notation/FretboardInsertionCommand.cpp
	../commands/notation/FretboardInsertionCommand.h
	../commands/notation/GraceCommand.cpp
	../commands/notation/GraceCommand.h
	../commands/notation/IncrementDisplacementsCommand.cpp
	../commands/notation/IncrementDisplacementsCommand.h
	../commands/notation/InterpretCommand.cpp
	../commands/notation/InterpretCommand.h
	../commands/notation/KeyInsertionCommand.cpp
	../commands/notation/KeyInsertionCommand.h
	../commands/notation/MakeAccidentalsCautionaryCommand.cpp
	../commands/notation/MakeAccidentalsCautionaryCommand.h
	../commands/notation/MakeChordCommand.cpp
	../commands/notation/MakeChordCommand.h
	../commands/notation/MakeNotesViableCommand.cpp
	../commands/notation/MakeNotesViableCommand.h
	../commands/notation/MakeRegionViableCommand.cpp
	../commands/notation/MakeRegionViableCommand.h
	../commands/notation/MultiKeyInsertionCommand.cpp
	../commands/notation/MultiKeyInsertionCommand.h
	../commands/notation/NormalizeRestsCommand.cpp
	../commands/notation/NormalizeRestsCommand.h
	../commands/notation/NoteInsertionCommand.cpp
	../commands/notation/NoteInsertionCommand.h
	../commands/notation/RemoveFingeringMarksCommand.cpp
	../commands/notation/RemoveFingeringMarksCommand.h
	../commands/notation/RemoveMarksCommand.cpp
	../commands/notation/RemoveMarksCommand.h
	../commands/notation/RemoveNotationQuantizeCommand.cpp
	../commands/notation/RemoveNotationQuantizeCommand.h
	../commands/notation/ResetDisplacementsCommand.cpp
	../commands/notation/ResetDisplacementsCommand.h
	../commands/notation/RespellCommand.cpp
	../commands/notation/RespellCommand.h
	../commands/notation/RestInsertionCommand.cpp
	../commands/notation/RestInsertionCommand.h
	../commands/notation/RestoreSlursCommand.cpp
	../commands/notation/RestoreSlursCommand.h
	../commands/notation/RestoreStemsCommand.cpp
	../commands/notation/RestoreStemsCommand.h
	../commands/notation/SetVisibilityCommand.cpp
	../commands/notation/SetVisibilityCommand.h
	../commands/notation/SustainInsertionCommand.cpp
	../commands/notation/SustainInsertionCommand.h
	../commands/notation/TextChangeCommand.cpp
	../commands/notation/TextChangeCommand.h
	../commands/notation/TextInsertionCommand.cpp
	../commands/notation/TextInsertionCommand.h
	../commands/notation/TieNotesCommand.cpp
	../commands/notation/TieNotesCommand.h
	../commands/notation/TupletCommand.cpp
	../commands/notation/TupletCommand.h
	../commands/notation/UnGraceCommand.cpp
	../commands/notation/UnGraceCommand.h
	../commands/notation/UntieNotesCommand.cpp
	../commands/notation/UntieNotesCommand.h
	../commands/notation/UnTupletCommand.cpp
	../commands/notation/UnTupletCommand.h
	../commands/segment/AddTempoChangeCommand.cpp
	../commands/segment/AddTempoChangeCommand.h
	../commands/segment/AddTimeSignatureAndNormalizeCommand.cpp
	../commands/segment/AddTimeSignatureAndNormalizeCommand.h
	../commands/segment/AddTimeSignatureCommand.cpp
	../commands/segment/AddTimeSignatureCommand.h
	../commands/segment/AddTracksCommand.cpp
	../commands/segment/AddTracksCommand.h
	../commands/segment/AddTriggerSegmentCommand.cpp
	../commands/segment/AddTriggerSegmentCommand.h
	../commands/segment/AudioSegmentAutoSplitCommand.cpp
	../commands/segment/AudioSegmentAutoSplitCommand.h
	../commands/segment/AudioSegmentInsertCommand.cpp
	../commands/segment/AudioSegmentInsertCommand.h
	../commands/segment/AudioSegmentResizeFromStartCommand.cpp
	../commands/segment/AudioSegmentResizeFromStartCommand.h
	../commands/segment/AudioSegmentSplitCommand.cpp
	../commands/segment/AudioSegmentSplitCommand.h
	../commands/segment/ChangeCompositionLengthCommand.cpp
	../commands/segment/ChangeCompositionLengthCommand.h
	../commands/segment/CreateTempoMapFromSegmentCommand.cpp
	../commands/segment/CreateTempoMapFromSegmentCommand.h
	../commands/segment/CutRangeCommand.cpp
	../commands/segment/CutRangeCommand.h
	../commands/segment/DeleteRangeCommand.cpp
	../commands/segment/DeleteRangeCommand.h
	../commands/segment/DeleteTracksCommand.cpp
	../commands/segment/DeleteTracksCommand.h
	../commands/segment/DeleteTriggerSegmentCommand.cpp
	../commands/segment/DeleteTriggerSegmentCommand.h
	../commands/segment/EraseSegmentsStartingInRangeCommand.cpp
	../commands/segment/EraseSegmentsStartingInRangeCommand.h
	../commands/segment/ModifyDefaultTempoCommand.cpp
	../commands/segment/ModifyDefaultTempoCommand.h
	../commands/segment/MoveTracksCommand.cpp
	../commands/segment/MoveTracksCommand.h
	../commands/segment/OpenOrCloseRangeCommand.cpp
	../commands/segment/OpenOrCloseRangeCommand.h
	../commands/segment/PasteConductorDataCommand.cpp
	../commands/segment/PasteConductorDataCommand.h
	../commands/segment/PasteRangeCommand.cpp
	../commands/segment/PasteRangeCommand.h
	../commands/segment/PasteToTriggerSegmentCommand.cpp
	../commands/segment/PasteToTriggerSegmentCommand.h
	../commands/segment/RemoveTempoChangeCommand.cpp
	../commands/segment/RemoveTempoChangeCommand.h
	../commands/segment/RemoveTimeSignatureCommand.cpp
	../commands/segment/RemoveTimeSignatureCommand.h
	../commands/segment/RenameTrackCommand.cpp
	../commands/segment/RenameTrackCommand.h
	../commands/segment/SegmentAutoSplitCommand.cpp
	../commands/segment/SegmentAutoSplitCommand.h
	../commands/segment/SegmentChangeQuantizationCommand.cpp
	../commands/segment/SegmentChangeQuantizationCommand.h
	../commands/segment/SegmentColourCommand.cpp
	../commands/segment/SegmentColourCommand.h
	../commands/segment/SegmentColourMapCommand.cpp
	../commands/segment/SegmentColourMapCommand.h
	../commands/segment/SegmentCommand.cpp
	../commands/segment/SegmentCommand.h
	../commands/segment/SegmentCommandRepeat.cpp
	../commands/segment/SegmentCommandRepeat.h
	../commands/segment/SegmentEraseCommand.cpp
	../commands/segment/SegmentEraseCommand.h
	../commands/segment/SegmentInsertCommand.cpp
	../commands/segment/SegmentInsertCommand.h
	../commands/segment/SegmentJoinCommand.cpp
	../commands/segment/SegmentJoinCommand.h
	../commands/segment/SegmentLabelCommand.cpp
	../commands/segment/SegmentLabelCommand.h
	../commands/segment/SegmentQuickCopyCommand.cpp
	../commands/segment/SegmentQuickCopyCommand.h
	../commands/segment/SegmentReconfigureCommand.cpp
	../commands/segment/SegmentReconfigureCommand.h
	../commands/segment/SegmentRecordCommand.cpp
	../commands/segment/SegmentRecordCommand.h
	../commands/segment/SegmentRepeatToCopyCommand.cpp
	../commands/segment/SegmentRepeatToCopyCommand.h
	../commands/segment/SegmentRescaleCommand.cpp
	../commands/segment/SegmentRescaleCommand.h
	../commands/segment/SegmentResizeFromStartCommand.cpp
	../commands/segment/SegmentResizeFromStartCommand.h
	../commands/segment/SegmentSingleRepeatToCopyCommand.cpp
	../commands/segment/SegmentSingleRepeatToCopyCommand.h
	../commands/segment/SegmentSplitByPitchCommand.cpp
	../commands/segment/SegmentSplitByPitchCommand.h
	../commands/segment/SegmentSplitByRecordingSrcCommand.cpp
	../commands/segment/SegmentSplitByRecordingSrcCommand.h
	../commands/segment/SegmentSplitCommand.cpp
	../commands/segment/SegmentSplitCommand.h
	../commands/segment/SetTriggerSegmentBasePitchCommand.cpp
	../commands/segment/SetTriggerSegmentBasePitchCommand.h
	../commands/segment/SetTriggerSegmentBaseVelocityCommand.cpp
	../commands/segment/SetTriggerSegmentBaseVelocityCommand.h
	../commands/segment/SetTriggerSegmentDefaultRetuneCommand.cpp
	../commands/segment/SetTriggerSegmentDefaultRetuneCommand.h
	../commands/segment/SetTriggerSegmentDefaultTimeAdjustCommand.cpp
	../commands/segment/SetTriggerSegmentDefaultTimeAdjustCommand.h
	../commands/studio/AddControlParameterCommand.cpp
	../commands/studio/AddControlParameterCommand.h
	../commands/studio/CreateOrDeleteDeviceCommand.cpp
	../commands/studio/CreateOrDeleteDeviceCommand.h
	../commands/studio/ModifyControlParameterCommand.cpp
	../commands/studio/ModifyControlParameterCommand.h
	../commands/studio/ModifyDeviceCommand.cpp
	../commands/studio/ModifyDeviceCommand.h
	../commands/studio/ModifyDeviceMappingCommand.cpp
	../commands/studio/ModifyDeviceMappingCommand.h
	../commands/studio/ModifyInstrumentMappingCommand.cpp
	../commands/studio/ModifyInstrumentMappingCommand.h
	../commands/studio/ReconnectDeviceCommand.cpp
	../commands/studio/ReconnectDeviceCommand.h
	../commands/studio/RemoveControlParameterCommand.cpp
	../commands/studio/RemoveControlParameterCommand.h
	../commands/studio/RenameDeviceCommand.cpp
	../commands/studio/RenameDeviceCommand.h
	../document/BasicCommand.cpp
	../document/BasicCommand.h
	../document/BasicSelectionCommand.cpp
	../document/BasicSelectionCommand.h
	../document/ConfigGroups.cpp
	../document/ConfigGroups.h
	../document/io/CsoundExporter.cpp
	../document/io/CsoundExporter.h
	../document/io/HydrogenLoader.cpp
	../document/io/HydrogenLoader.h
	../document/io/HydrogenXMLHandler.cpp
	../document/io/HydrogenXMLHandler.h
	../document/io/LilypondExporter.cpp
	../document/io/LilypondExporter.h
	../document/io/MupExporter.cpp
	../document/io/MupExporter.h
	../document/io/MusicXmlExporter.cpp
	../document/io/MusicXmlExporter.h
	../document/io/RG21Loader.cpp
	../document/io/RG21Loader.h
	../document/MultiViewCommandHistory.cpp
	../document/MultiViewCommandHistory.h
	../document/RosegardenGUIDoc.cpp
	../document/RosegardenGUIDoc.h
	../document/RoseXmlHandler.cpp
	../document/RoseXmlHandler.h
	../document/XmlStorableEvent.cpp
	../document/XmlStorableEvent.h
	application/LircClient.cpp
	application/LircClient.h
	application/LircCommander.cpp
	application/LircCommander.h
	application/main.cpp
	application/RosegardenApplication.cpp
	application/RosegardenApplication.h
	application/RosegardenDCOP.h
	application/RosegardenGUIApp.cpp
	application/RosegardenGUIApp.h
	application/RosegardenGUIView.cpp
	application/RosegardenGUIView.h
	application/RosegardenIface.cpp
	application/RosegardenIface.h
	application/SetWaitCursor.cpp
	application/SetWaitCursor.h
	application/StartupTester.cpp
	application/StartupTester.h
	configuration/AudioConfigurationPage.cpp
	configuration/AudioConfigurationPage.h
	configuration/ColourConfigurationPage.cpp
	configuration/ColourConfigurationPage.h
	configuration/ConfigurationPage.cpp
	configuration/ConfigurationPage.h
	configuration/DocumentMetaConfigurationPage.cpp
	configuration/DocumentMetaConfigurationPage.h
	configuration/GeneralConfigurationPage.cpp
	configuration/GeneralConfigurationPage.h
	configuration/LatencyConfigurationPage.cpp
	configuration/LatencyConfigurationPage.h
	configuration/MatrixConfigurationPage.cpp
	configuration/MatrixConfigurationPage.h
	configuration/NotationConfigurationPage.cpp
	configuration/NotationConfigurationPage.h
	configuration/SequencerConfigurationPage.cpp
	configuration/SequencerConfigurationPage.h
	configuration/TabbedConfigurationPage.cpp
	configuration/TabbedConfigurationPage.h
	dialogs/AudioManagerDialog.cpp
	dialogs/AudioManagerDialog.h
	dialogs/AudioPlayingDialog.cpp
	dialogs/AudioPlayingDialog.h
	dialogs/AudioPluginDialog.cpp
	dialogs/AudioPluginDialog.h
	dialogs/AudioSplitDialog.cpp
	dialogs/AudioSplitDialog.h
	dialogs/BeatsBarsDialog.cpp
	dialogs/BeatsBarsDialog.h
	dialogs/ClefDialog.cpp
	dialogs/ClefDialog.h
	dialogs/CompositionLengthDialog.cpp
	dialogs/CompositionLengthDialog.h
	dialogs/ConfigureDialogBase.cpp
	dialogs/ConfigureDialogBase.h
	dialogs/ConfigureDialog.cpp
	dialogs/ConfigureDialog.h
	dialogs/CountdownBar.cpp
	dialogs/CountdownBar.h
	dialogs/CountdownDialog.cpp
	dialogs/CountdownDialog.h
	dialogs/DocumentConfigureDialog.cpp
	dialogs/DocumentConfigureDialog.h
	dialogs/EventEditDialog.cpp
	dialogs/EventEditDialog.h
	dialogs/EventFilterDialog.cpp
	dialogs/EventFilterDialog.h
	dialogs/EventParameterDialog.cpp
	dialogs/EventParameterDialog.h
	dialogs/ExportDeviceDialog.cpp
	dialogs/ExportDeviceDialog.h
	dialogs/FileLocateDialog.cpp
	dialogs/FileLocateDialog.h
	dialogs/FileMergeDialog.cpp
	dialogs/FileMergeDialog.h
	dialogs/FloatEdit.cpp
	dialogs/FloatEdit.h
	dialogs/IdentifyTextCodecDialog.cpp
	dialogs/IdentifyTextCodecDialog.h
	dialogs/ImportDeviceDialog.cpp
	dialogs/ImportDeviceDialog.h
	dialogs/InterpretDialog.cpp
	dialogs/InterpretDialog.h
	dialogs/KeySignatureDialog.cpp
	dialogs/KeySignatureDialog.h
	dialogs/LilypondOptionsDialog.cpp
	dialogs/LilypondOptionsDialog.h
	dialogs/LyricEditDialog.cpp
	dialogs/LyricEditDialog.h
	dialogs/MakeOrnamentDialog.cpp
	dialogs/MakeOrnamentDialog.h
	dialogs/ManageMetronomeDialog.cpp
	dialogs/ManageMetronomeDialog.h
	dialogs/PasteNotationDialog.cpp
	dialogs/PasteNotationDialog.h
	dialogs/PitchDialog.cpp
	dialogs/PitchDialog.h
	dialogs/PitchPickerDialog.cpp
	dialogs/PitchPickerDialog.h
	dialogs/QuantizeDialog.cpp
	dialogs/QuantizeDialog.h
	dialogs/RescaleDialog.cpp
	dialogs/RescaleDialog.h
	dialogs/ShowSequencerStatusDialog.cpp
	dialogs/ShowSequencerStatusDialog.h
	dialogs/SimpleEventEditDialog.cpp
	dialogs/SimpleEventEditDialog.h
	dialogs/SplitByPitchDialog.cpp
	dialogs/SplitByPitchDialog.h
	dialogs/SplitByRecordingSrcDialog.cpp
	dialogs/SplitByRecordingSrcDialog.h
	dialogs/TempoDialog.cpp
	dialogs/TempoDialog.h
	dialogs/TextEventDialog.cpp
	dialogs/TextEventDialog.h
	dialogs/TimeDialog.cpp
	dialogs/TimeDialog.h
	dialogs/TimeSignatureDialog.cpp
	dialogs/TimeSignatureDialog.h
	dialogs/TransportDialog.cpp
	dialogs/TransportDialog.h
	dialogs/TriggerSegmentDialog.cpp
	dialogs/TriggerSegmentDialog.h
	dialogs/TupletDialog.cpp
	dialogs/TupletDialog.h
	dialogs/UnusedAudioSelectionDialog.cpp
	dialogs/UnusedAudioSelectionDialog.h
	dialogs/UseOrnamentDialog.cpp
	dialogs/UseOrnamentDialog.h
	editors/eventlist/EventView.cpp
	editors/eventlist/EventView.h
	editors/eventlist/EventViewItem.cpp
	editors/eventlist/EventViewItem.h
	editors/eventlist/TrivialVelocityDialog.cpp
	editors/eventlist/TrivialVelocityDialog.h
	editors/guitar/Barre.cpp
	editors/guitar/Barre.h
	editors/guitar/BarreList.cpp
	editors/guitar/BarreList.h
	editors/guitar/Chord.cpp
	editors/guitar/Chord.h
	editors/guitar/ChordMap.cpp
	editors/guitar/ChordMap.h
	editors/guitar/ChordName.cpp
	editors/guitar/ChordName.h
	editors/guitar/DuplicateException.cpp
	editors/guitar/DuplicateException.h
	editors/guitar/FingeringConstructor.cpp
	editors/guitar/FingeringConstructor.h
	editors/guitar/Fingering.cpp
	editors/guitar/Fingering.h
	editors/guitar/GuitarChordEditor.cpp
	editors/guitar/GuitarChordEditor.h
	editors/guitar/GuitarNeck.cpp
	editors/guitar/GuitarNeck.h
	editors/guitar/GuitarString.h
	editors/guitar/GuitarTabEditorWindow.cpp
	editors/guitar/GuitarTabEditorWindow.h
	editors/guitar/GuitarTabSelectorDialog.cpp
	editors/guitar/GuitarTabSelectorDialog.h
	editors/guitar/GuitarXmlHandler.cpp
	editors/guitar/GuitarXmlHandler.h
	editors/guitar/Note.cpp
	editors/guitar/Note.h
	editors/guitar/NoteSymbols.cpp
	editors/guitar/NoteSymbols.h
	editors/guitar/test_barre.cpp
	editors/guitar/test_chordmap.cpp
	editors/guitar/test_chordname.cpp
	editors/guitar/test_fingeringconstruct.cpp
	editors/guitar/test_fingering.cpp
	editors/guitar/test_guitar.cpp
	editors/guitar/test_note.cpp
	editors/matrix/MatrixCanvasView.cpp
	editors/matrix/MatrixCanvasView.h
	editors/matrix/MatrixElement.cpp
	editors/matrix/MatrixElement.h
	editors/matrix/MatrixEraser.cpp
	editors/matrix/MatrixEraser.h
	editors/matrix/MatrixHLayout.cpp
	editors/matrix/MatrixHLayout.h
	editors/matrix/MatrixMover.cpp
	editors/matrix/MatrixMover.h
	editors/matrix/MatrixPainter.cpp
	editors/matrix/MatrixPainter.h
	editors/matrix/MatrixParameterBox.cpp
	editors/matrix/MatrixParameterBox.h
	editors/matrix/MatrixResizer.cpp
	editors/matrix/MatrixResizer.h
	editors/matrix/MatrixSelector.cpp
	editors/matrix/MatrixSelector.h
	editors/matrix/MatrixStaff.cpp
	editors/matrix/MatrixStaff.h
	editors/matrix/MatrixToolBox.cpp
	editors/matrix/MatrixToolBox.h
	editors/matrix/MatrixTool.cpp
	editors/matrix/MatrixTool.h
	editors/matrix/MatrixView.cpp
	editors/matrix/MatrixView.h
	editors/matrix/MatrixVLayout.cpp
	editors/matrix/MatrixVLayout.h
	editors/matrix/PianoKeyboard.cpp
	editors/matrix/PianoKeyboard.h
	editors/matrix/QCanvasMatrixDiamond.cpp
	editors/matrix/QCanvasMatrixDiamond.h
	editors/matrix/QCanvasMatrixRectangle.cpp
	editors/matrix/QCanvasMatrixRectangle.h
	editors/notation/ClefInserter.cpp
	editors/notation/ClefInserter.h
	editors/notation/FontViewFrame.cpp
	editors/notation/FontViewFrame.h
	editors/notation/FretboardInserter.cpp
	editors/notation/FretboardInserter.h
	editors/notation/NotationCanvasView.cpp
	editors/notation/NotationCanvasView.h
	editors/notation/NotationChord.cpp
	editors/notation/NotationChord.h
	editors/notation/NotationElement.cpp
	editors/notation/NotationElement.h
	editors/notation/NotationEraser.cpp
	editors/notation/NotationEraser.h
	editors/notation/NotationGroup.cpp
	editors/notation/NotationGroup.h
	editors/notation/NotationHLayout.cpp
	editors/notation/NotationHLayout.h
	editors/notation/NotationProperties.cpp
	editors/notation/NotationProperties.h
	editors/notation/NotationSelectionPaster.cpp
	editors/notation/NotationSelectionPaster.h
	editors/notation/NotationSelector.cpp
	editors/notation/NotationSelector.h
	editors/notation/NotationStaff.cpp
	editors/notation/NotationStaff.h
	editors/notation/NotationStrings.cpp
	editors/notation/NotationStrings.h
	editors/notation/NotationToolBox.cpp
	editors/notation/NotationToolBox.h
	editors/notation/NotationTool.cpp
	editors/notation/NotationTool.h
	editors/notation/NotationView.cpp
	editors/notation/NotationView.h
	editors/notation/NotationVLayout.cpp
	editors/notation/NotationVLayout.h
	editors/notation/NoteCharacter.cpp
	editors/notation/NoteCharacter.h
	editors/notation/NoteCharacterNames.cpp
	editors/notation/NoteCharacterNames.h
	editors/notation/NoteFont.cpp
	editors/notation/NoteFontFactory.cpp
	editors/notation/NoteFontFactory.h
	editors/notation/NoteFont.h
	editors/notation/NoteFontMap.cpp
	editors/notation/NoteFontMap.h
	editors/notation/NoteFontViewer.cpp
	editors/notation/NoteFontViewer.h
	editors/notation/NoteInserter.cpp
	editors/notation/NoteInserter.h
	editors/notation/NotePixmapFactory.cpp
	editors/notation/NotePixmapFactory.h
	editors/notation/NotePixmapPainter.h
	editors/notation/NotePixmapParameters.cpp
	editors/notation/NotePixmapParameters.h
	editors/notation/NoteStyle.cpp
	editors/notation/NoteStyleFactory.cpp
	editors/notation/NoteStyleFactory.h
	editors/notation/NoteStyleFileReader.cpp
	editors/notation/NoteStyleFileReader.h
	editors/notation/NoteStyle.h
	editors/notation/RestInserter.cpp
	editors/notation/RestInserter.h
	editors/notation/SystemFont.cpp
	editors/notation/SystemFont.h
	editors/notation/SystemFontQt.cpp
	editors/notation/SystemFontQt.h
	editors/notation/SystemFontXft.cpp
	editors/notation/SystemFontXft.h
	editors/notation/TextInserter.cpp
	editors/notation/TextInserter.h
	editors/parameters/AudioInstrumentParameterPanel.cpp
	editors/parameters/AudioInstrumentParameterPanel.h
	editors/parameters/InstrumentParameterBox.cpp
	editors/parameters/InstrumentParameterBox.h
	editors/parameters/InstrumentParameterPanel.cpp
	editors/parameters/InstrumentParameterPanel.h
	editors/parameters/MIDIInstrumentParameterPanel.cpp
	editors/parameters/MIDIInstrumentParameterPanel.h
	editors/parameters/RosegardenParameterArea.cpp
	editors/parameters/RosegardenParameterArea.h
	editors/parameters/RosegardenParameterBox.cpp
	editors/parameters/RosegardenParameterBox.h
	editors/parameters/SegmentParameterBox.cpp
	editors/parameters/SegmentParameterBox.h
	editors/parameters/TrackParameterBox.cpp
	editors/parameters/TrackParameterBox.h
	editors/segment/AudioPreviewPainter.cpp
	editors/segment/AudioPreviewPainter.h
	editors/segment/AudioPreviewThread.cpp
	editors/segment/AudioPreviewThread.h
	editors/segment/AudioPreviewUpdater.cpp
	editors/segment/AudioPreviewUpdater.h
	editors/segment/BarButtons.cpp
	editors/segment/BarButtons.h
	editors/segment/BarButtonsWidget.cpp
	editors/segment/BarButtonsWidget.h
	editors/segment/CompositionColourCache.cpp
	editors/segment/CompositionColourCache.h
	editors/segment/CompositionItem.cpp
	editors/segment/CompositionItem.h
	editors/segment/CompositionItemHelper.cpp
	editors/segment/CompositionItemHelper.h
	editors/segment/CompositionItemImpl.cpp
	editors/segment/CompositionItemImpl.h
	editors/segment/CompositionModel.cpp
	editors/segment/CompositionModel.h
	editors/segment/CompositionModelImpl.cpp
	editors/segment/CompositionModelImpl.h
	editors/segment/CompositionRect.cpp
	editors/segment/CompositionRect.h
	editors/segment/CompositionView.cpp
	editors/segment/CompositionView.h
	editors/segment/ControlEditorDialog.cpp
	editors/segment/ControlEditorDialog.h
	editors/segment/ControlParameterEditDialog.cpp
	editors/segment/ControlParameterEditDialog.h
	editors/segment/ControlParameterItem.cpp
	editors/segment/ControlParameterItem.h
	editors/segment/MarkerEditorDialog.cpp
	editors/segment/MarkerEditorDialog.h
	editors/segment/MarkerEditorViewItem.cpp
	editors/segment/MarkerEditorViewItem.h
	editors/segment/MarkerModifyDialog.cpp
	editors/segment/MarkerModifyDialog.h
	editors/segment/PlayList.cpp
	editors/segment/PlayListDialog.cpp
	editors/segment/PlayListDialog.h
	editors/segment/PlayList.h
	editors/segment/PlayListView.cpp
	editors/segment/PlayListView.h
	editors/segment/PlayListViewItem.cpp
	editors/segment/PlayListViewItem.h
	editors/segment/PreviewRect.cpp
	editors/segment/PreviewRect.h
	editors/segment/SegmentEraser.cpp
	editors/segment/SegmentEraser.h
	editors/segment/SegmentItemPreview.cpp
	editors/segment/SegmentItemPreview.h
	editors/segment/SegmentJoiner.cpp
	editors/segment/SegmentJoiner.h
	editors/segment/SegmentMover.cpp
	editors/segment/SegmentMover.h
	editors/segment/SegmentOrderer.cpp
	editors/segment/SegmentOrderer.h
	editors/segment/SegmentPencil.cpp
	editors/segment/SegmentPencil.h
	editors/segment/SegmentResizer.cpp
	editors/segment/SegmentResizer.h
	editors/segment/SegmentSelector.cpp
	editors/segment/SegmentSelector.h
	editors/segment/SegmentSplitter.cpp
	editors/segment/SegmentSplitter.h
	editors/segment/SegmentToolBox.cpp
	editors/segment/SegmentToolBox.h
	editors/segment/SegmentTool.cpp
	editors/segment/SegmentTool.h
	editors/segment/TrackButtons.cpp
	editors/segment/TrackButtons.h
	editors/segment/TrackEditor.cpp
	editors/segment/TrackEditor.h
	editors/segment/TrackEditorIface.cpp
	editors/segment/TrackEditorIface.h
	editors/segment/TrackHeader.cpp
	editors/segment/TrackHeader.h
	editors/segment/TrackLabel.cpp
	editors/segment/TrackLabel.h
	editors/segment/TrackVUMeter.cpp
	editors/segment/TrackVUMeter.h
	editors/segment/TriggerManagerItem.cpp
	editors/segment/TriggerManagerItem.h
	editors/segment/TriggerSegmentManager.cpp
	editors/segment/TriggerSegmentManager.h
	editors/tempo/TempoListItem.cpp
	editors/tempo/TempoListItem.h
	editors/tempo/TempoView.cpp
	editors/tempo/TempoView.h
	general/ActiveItem.cpp
	general/ActiveItem.h
	general/BarLine.cpp
	general/BarLine.h
	general/BaseToolBox.cpp
	general/BaseToolBox.h
	general/BaseTool.cpp
	general/BaseTool.h
	general/CanvasCursor.cpp
	general/CanvasCursor.h
	general/CanvasItemGC.cpp
	general/CanvasItemGC.h
	general/CategoryElement.cpp
	general/CategoryElement.h
	general/ClefIndex.h
	general/EditToolBox.cpp
	general/EditToolBox.h
	general/EditTool.cpp
	general/EditTool.h
	general/EditViewBase.cpp
	general/EditViewBase.h
	general/EditView.cpp
	general/EditView.h
	general/EditViewTimeSigNotifier.h
	general/GUIPalette.cpp
	general/GUIPalette.h
	general/HZoomable.cpp
	general/HZoomable.h
	general/LinedStaff.cpp
	general/LinedStaff.h
	general/LinedStaffManager.cpp
	general/LinedStaffManager.h
	general/MidiPitchLabel.cpp
	general/MidiPitchLabel.h
	general/PixmapFunctions.cpp
	general/PixmapFunctions.h
	general/PresetElement.cpp
	general/PresetElement.h
	general/PresetGroup.cpp
	general/PresetGroup.h
	general/PresetHandlerDialog.cpp
	general/PresetHandlerDialog.h
	general/ProgressReporter.cpp
	general/ProgressReporter.h
	general/RosegardenCanvasView.cpp
	general/RosegardenCanvasView.h
	general/RosegardenScrollView.cpp
	general/RosegardenScrollView.h
	general/Spline.cpp
	general/Spline.h
	general/StaffLine.cpp
	general/StaffLine.h
	kdeext/KLedButton.cpp
	kdeext/KLedButton.h
	kdeext/KStartupLogo.cpp
	kdeext/KStartupLogo.h
	kdeext/KTmpStatusMsg.cpp
	kdeext/KTmpStatusMsg.h
	kdeext/QCanvasGroupableItem.cpp
	kdeext/QCanvasGroupableItem.h
	kdeext/QCanvasSimpleSprite.cpp
	kdeext/QCanvasSimpleSprite.h
	kdeext/RGLed.cpp
	rulers/ChordNameRuler.cpp
	rulers/ChordNameRuler.h
	rulers/ControlChangeCommand.cpp
	rulers/ControlChangeCommand.h
	rulers/ControlItem.cpp
	rulers/ControlItem.h
	rulers/ControllerEventAdapter.cpp
	rulers/ControllerEventAdapter.h
	rulers/ControllerEventsRuler.cpp
	rulers/ControllerEventsRuler.h
	rulers/ControlRuler.cpp
	rulers/ControlRulerEventEraseCommand.cpp
	rulers/ControlRulerEventEraseCommand.h
	rulers/ControlRulerEventInsertCommand.cpp
	rulers/ControlRulerEventInsertCommand.h
	rulers/ControlRuler.h
	rulers/ControlSelector.cpp
	rulers/ControlSelector.h
	rulers/ControlTool.h
	rulers/DefaultVelocityColour.cpp
	rulers/DefaultVelocityColour.h
	rulers/ElementAdapter.h
	rulers/LoopRuler.cpp
	rulers/LoopRuler.h
	rulers/PercussionPitchRuler.cpp
	rulers/PercussionPitchRuler.h
	rulers/PitchRuler.cpp
	rulers/PitchRuler.h
	rulers/PropertyBox.cpp
	rulers/PropertyBox.h
	rulers/PropertyControlRuler.cpp
	rulers/PropertyControlRuler.h
	rulers/PropertyViewRuler.cpp
	rulers/PropertyViewRuler.h
	rulers/RawNoteRuler.cpp
	rulers/RawNoteRuler.h
	rulers/TempoColour.cpp
	rulers/TempoColour.h
	rulers/TempoRuler.cpp
	rulers/TempoRuler.h
	rulers/TextRuler.cpp
	rulers/TextRuler.h
	rulers/VelocityColour.cpp
	rulers/VelocityColour.h
	rulers/ViewElementAdapter.cpp
	rulers/ViewElementAdapter.h
	seqmanager/AudioSegmentMmapper.cpp
	seqmanager/AudioSegmentMmapper.h
	seqmanager/CompositionMmapper.cpp
	seqmanager/CompositionMmapper.h
	seqmanager/ControlBlockMmapper.cpp
	seqmanager/ControlBlockMmapper.h
	seqmanager/MetronomeMmapper.cpp
	seqmanager/MetronomeMmapper.h
	seqmanager/MidiFilterDialog.cpp
	seqmanager/MidiFilterDialog.h
	seqmanager/SegmentMmapper.cpp
	seqmanager/SegmentMmapperFactory.cpp
	seqmanager/SegmentMmapperFactory.h
	seqmanager/SegmentMmapper.h
	seqmanager/SequenceManager.cpp
	seqmanager/SequenceManager.h
	seqmanager/SequencerMapper.cpp
	seqmanager/SequencerMapper.h
	seqmanager/SpecialSegmentMmapper.cpp
	seqmanager/SpecialSegmentMmapper.h
	seqmanager/TempoSegmentMmapper.cpp
	seqmanager/TempoSegmentMmapper.h
	seqmanager/TimeSigSegmentMmapper.cpp
	seqmanager/TimeSigSegmentMmapper.h
	studio/AudioMixerWindow.cpp
	studio/AudioMixerWindow.h
	studio/AudioPluginClipboard.cpp
	studio/AudioPluginClipboard.h
	studio/AudioPlugin.cpp
	studio/AudioPlugin.h
	studio/AudioPluginManager.cpp
	studio/AudioPluginManager.h
	studio/AudioPluginOSCGUI.cpp
	studio/AudioPluginOSCGUI.h
	studio/AudioPluginOSCGUIManager.cpp
	studio/AudioPluginOSCGUIManager.h
	studio/BankEditorDialog.cpp
	studio/BankEditorDialog.h
	studio/ChangeRecordDeviceCommand.cpp
	studio/ChangeRecordDeviceCommand.h
	studio/DeviceEditorDialog.cpp
	studio/DeviceEditorDialog.h
	studio/DeviceManagerDialog.cpp
	studio/DeviceManagerDialog.h
	studio/MidiBankListViewItem.cpp
	studio/MidiBankListViewItem.h
	studio/MidiDeviceListViewItem.cpp
	studio/MidiDeviceListViewItem.h
	studio/MidiKeyMapListViewItem.cpp
	studio/MidiKeyMapListViewItem.h
	studio/MidiKeyMappingEditor.cpp
	studio/MidiKeyMappingEditor.h
	studio/MidiMixerVUMeter.cpp
	studio/MidiMixerVUMeter.h
	studio/MidiMixerWindow.cpp
	studio/MidiMixerWindow.h
	studio/MidiProgramsEditor.cpp
	studio/MidiProgramsEditor.h
	studio/MixerWindow.cpp
	studio/MixerWindow.h
	studio/NameSetEditor.cpp
	studio/NameSetEditor.h
	studio/OSCMessage.cpp
	studio/OSCMessage.h
	studio/RemapInstrumentDialog.cpp
	studio/RemapInstrumentDialog.h
	studio/StudioControl.cpp
	studio/StudioControl.h
	studio/SynthPluginManagerDialog.cpp
	studio/SynthPluginManagerDialog.h
	studio/TimerCallbackAssistant.cpp
	studio/TimerCallbackAssistant.h
	widgets/AudioFaderBox.cpp
	widgets/AudioFaderBox.h
	widgets/AudioListItem.h
	widgets/AudioListView.cpp
	widgets/AudioListView.h
	widgets/AudioRouteMenu.cpp
	widgets/AudioRouteMenu.h
	widgets/AudioVUMeter.cpp
	widgets/AudioVUMeter.h
	widgets/BigArrowButton.h
	widgets/CollapsingFrame.cpp
	widgets/CollapsingFrame.h
	widgets/ColourTable.cpp
	widgets/ColourTable.h
	widgets/ColourTableItem.cpp
	widgets/ColourTableItem.h
	widgets/CurrentProgressDialog.cpp
	widgets/CurrentProgressDialog.h
	widgets/Fader.cpp
	widgets/Fader.h
	widgets/HSpinBox.cpp
	widgets/HSpinBox.h
	widgets/Label.cpp
	widgets/Label.h
	widgets/MidiFaderWidget.cpp
	widgets/MidiFaderWidget.h
	widgets/PitchChooser.cpp
	widgets/PitchChooser.h
	widgets/PitchDragLabel.cpp
	widgets/PitchDragLabel.h
	widgets/PluginControl.cpp
	widgets/PluginControl.h
	widgets/ProgressBar.cpp
	widgets/ProgressBar.h
	widgets/ProgressDialog.cpp
	widgets/ProgressDialog.h
	widgets/QDeferScrollView.cpp
	widgets/QDeferScrollView.h
	widgets/QuantizeParameters.cpp
	widgets/QuantizeParameters.h
	widgets/RosegardenPopupMenu.h
	widgets/Rotary.cpp
	widgets/Rotary.h
	widgets/ScrollBox.cpp
	widgets/ScrollBoxDialog.cpp
	widgets/ScrollBoxDialog.h
	widgets/ScrollBox.h
	widgets/SpinBox.cpp
	widgets/SpinBox.h
	widgets/TextFloat.cpp
	widgets/TextFloat.h
	widgets/TimeWidget.cpp
	widgets/TimeWidget.h
	widgets/TristateCheckBox.cpp
	widgets/TristateCheckBox.h
	widgets/VUMeter.cpp
	widgets/VUMeter.h
	widgets/WheelyButton.cpp
	widgets/WheelyButton.h
	widgets/ZoomSlider.cpp
	widgets/ZoomSlider.h
)

SET(dcop_SRCS
	application/RosegardenIface.h 
	editors/segment/TrackEditorIface.h
)

SET(ui_SRCS 
	ui/RosegardenTransport.ui
)

KDE3_ADD_DCOP_SKELS(gui_SRCS ${dcop_SRCS})
KDE3_ADD_DCOP_STUBS(gui_SRCS ${dcop_SRCS}) 
KDE3_ADD_UI_FILES(gui_SRCS ${ui_SRCS})
KDE3_AUTOMOC(${gui_SRCS})
KDE3_ADD_EXECUTABLE(rosegarden ${gui_SRCS})

TARGET_LINK_LIBRARIES(rosegarden
	${QT_AND_KDECORE_LIBS} 
	${ALSA_LIBS} 
	kdeui
	kio
	kdeprint
	base
	RosegardenSound
)
