# base library: "libbase.a"

INCLUDE_DIRECTORIES ( 
    ${ROSEGARDEN_SOURCE_DIR}/src/base
    ${ROSEGARDEN_SOURCE_DIR}/src/misc
)

SET(base_SRCS
	AnalysisTypes.cpp
	AnalysisTypes.h
	AudioDevice.cpp
	AudioDevice.h
	AudioLevel.cpp
	AudioLevel.h
	AudioPluginInstance.cpp
	AudioPluginInstance.h
	BaseProperties.cpp
	BaseProperties.h
	Clipboard.cpp
	Clipboard.h
	Colour.cpp
	Colour.h
	ColourMap.cpp
	ColourMap.h
	Composition.cpp
	Composition.h
	CompositionTimeSliceAdapter.cpp
	CompositionTimeSliceAdapter.h
	Configuration.cpp
	Configuration.h
	Controllable.h
	ControlParameter.cpp
	ControlParameter.h
	Device.cpp
	Device.h
	Equation.cpp
	Equation.h
	Event.cpp
	Event.h
	Exception.cpp
	Exception.h
	FastVector.h
	Instrument.cpp
	Instrument.h
	LayoutEngine.cpp
	LayoutEngine.h
	Marker.cpp
	Marker.h
	MidiDevice.cpp
	MidiDevice.h
	MidiProgram.cpp
	MidiProgram.h
	MidiTypes.cpp
	MidiTypes.h
	NotationTypes.cpp
	NotationTypes.h
	Profiler.cpp
	Profiler.h
	Property.cpp
	Property.h
	PropertyMap.cpp
	PropertyMap.h
	PropertyName.cpp
	PropertyName.h
	Quantizer.cpp
	Quantizer.h
	RealTime.cpp
	RealTime.h
	RefreshStatus.h
	RulerScale.cpp
	RulerScale.h
	ScriptAPI.cpp
	ScriptAPI.h
	Segment.cpp
	Segment.h
	SegmentMatrixHelper.cpp
	SegmentMatrixHelper.h
	SegmentNotationHelper.cpp
	SegmentNotationHelper.h
	SegmentPerformanceHelper.cpp
	SegmentPerformanceHelper.h
	Selection.cpp
	Selection.h
	Sets.cpp
	Sets.h
	SnapGrid.cpp
	SnapGrid.h
	SoftSynthDevice.cpp
	SoftSynthDevice.h
	Staff.cpp
	Staff.h
	Studio.cpp
	Studio.h
	Track.cpp
	Track.h
	TriggerSegment.cpp
	TriggerSegment.h
	ViewElement.cpp
	ViewElement.h
	XmlExportable.cpp
	XmlExportable.h 
	../misc/Debug.cpp
	../misc/Debug.h
	../misc/Strings.cpp
	../misc/Strings.h
)

ADD_LIBRARY(base STATIC ${base_SRCS})
